# floofpoof

./: .gitignore  Procfile  README.md  comandos_django.txt  db.sqlite3  ersasuosDesktopfloofpoof  pyproject.toml
PTI/: comandos_django.txt
PTI/Gestor/: Plano_Semanal.docx  Requisitos.docx  Responsabilidades.docx
PTI/Semanas/semana_1/: Plano_Semanal_1.docx  Progresso_Semanal_1.docx  Testes_PBF_e_PAF.docx  User_stories.docx
PTI/Semanas/semana_2/: Plano_Semanal_2.docx  (+3 more)
floofy_project/: asgi.py  routing.py  settings.py
forum/: urls.py  views.py
group_chat/: urls.py  views.py
groups/: urls.py  views.py
login/: models.py
login/migrations/: 0001_initial.py  0002_task_finished.py  0003_score.py  0004_auto_20200520_2058.py  0005_auto_20200521_1759.py  0006_post.py  0007_auto_20200526_1847.py  0008_subject_code.py  0009_auto_20200526_2319.py
mygroup/: urls.py  views.py
templates/: base.html  css.html
templates/forum/: forum.html  post_confirm_delete.html  post_detail.html  post_form.html  sel-subject-forum.html
templates/groups/: groups-create.html  groups-join.html  groups-sub.html  stages.html  this-group.html
templates/include/: header.html
templates/login/: dayschedule.html  logged_student.html  logged_teacher.html  login_home.html  schedule.html  select_subject_page.html  subject_page.html
templates/mygroup/: feedback.html  leave-group.html  meetings.html  new-meeting.html  scores.html  tasks.html  this-task.html
templates/users_chat/: myContacts.html  search_user.html
upload_data/: urls.py
users_chat/: forms.py  views.py
(+297 files in other folders)
