[tool.poetry]
name = "floofy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
django = "^3.0.6"
daphne = "^2.5.0"
channels = "^2.4.0"
channels_redis = "^2.4.2"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
